Refactorizacion de codigo