@@ -10,11 +10,11 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collection;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +22,7 @@ public class UserDetailsCustomService implements UserDetailsService {
 
     private final IUserRepository repository;
 
+    @Transactional
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         Optional<User> dbResponse = repository.findByEmail(email);
@@ -30,7 +31,7 @@ public class UserDetailsCustomService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(dbResponse.get().getEmail(), dbResponse.get().getPassword(), mapRolesToGrantedAuth(dbResponse.get().getRoles()));
     }
 
-    private Collection<? extends GrantedAuthority> mapRolesToGrantedAuth(Set<Role> roles){
-        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList());
+    private Collection<? extends GrantedAuthority> mapRolesToGrantedAuth(Set<Role> roles) {
+        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).toList();
     }
 }
